FIX: Addressed an overflow-x issue for mobile resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,14 @@ body {
   color: rgb(255, 247, 221);
 }
 
+.maincontent {
+  max-width: 100vw;
+}
+
+.row {
+  margin-left: auto;
+  margin-right: auto;
+}
 /*--------------------------------------- Index Page --------------------------------------- */
 .diceroll-logo {
   position: fixed;
@@ -92,7 +100,7 @@ a:hover {
   overflow: hidden;
   position: fixed;
   bottom: 0;
-  width: 100%;
+  width: 100vw;
 }
 
 .navbar h5 {
@@ -338,7 +346,7 @@ a:hover {
   }
 
   .dicebox {
-    width: 80%;
+    width: 90%;
     margin-bottom: 0em;
     min-height: 100px;
   }
@@ -406,6 +414,11 @@ a:hover {
     max-height: 90vh;
     max-width: 100%;
     padding: 0px;
+  }
+
+  .row {
+    margin-left: -15px;
+    margin-right: -15px;
   }
 
   .dicebox {
@@ -508,21 +521,21 @@ a:hover {
   }
 
   #roller {
-    margin-top: -15px;
-    margin-bottom: 20px;
+    margin-top: -20px;
+    margin-bottom: 10px;
     width: 35vw;
     margin-left: 10vw;
-    margin-right: 5vw;
-    height: 2.5em;
+    margin-right: 2vw;
+    height: 4em;
   }
 
   #restart {
-    margin-top: -15px;
-    margin-bottom: 20px;
+    margin-top: -20px;
+    margin-bottom: 10px;
     width: 35vw;
-    margin-left: 5vw;
+    margin-left: 2vw;
     margin-right: 10vw;
-    height: 2.5em;
+    height: 4em;
     padding: 8px 8px;
   }
 
@@ -544,7 +557,6 @@ a:hover {
 @media only screen and (max-width: 350px) {
   #roller,
   #restart {
-    height: 3em;
     font-size: 11px;
   }
 
